crates/dsql-execute/tests/it/snapshots/it__defaulted_dynamic_identities.snap
---
source: crates/dsql-execute/tests/it/main.rs
expression: omitted
---
MaterializedOperation {
    sql: "select $1 where TRUE and TRUE order by NULL::integer",
    parameters: [
        BoundParameter {
            path: "params.tenant",
            data_type: "int",
            wire: "integer",
            provider_type: None,
            collection: false,
            value: 7,
        },
    ],
}
