crates/dsql-execute/tests/it/snapshots/it__identity.snap
---
source: crates/dsql-execute/tests/it/main.rs
expression: "materialize(&dynamic_operation(),\n&empty).expect(\"empty dynamic inputs materialize\")"
---
MaterializedOperation {
    sql: "select $1 where TRUE and TRUE order by NULL::integer",
    parameters: [
        BoundParameter {
            path: "params.tenant",
            data_type: "int",
            wire: Integer,
            provider_type: None,
            collection: false,
            value: 7,
        },
    ],
}
