crates/dsql-execute/tests/it/snapshots/it__input_metadata_without_wire_encoding_is_rejected.snap
---
source: crates/dsql-execute/tests/it/main.rs
expression: error.to_string()
---
missing field `wire` in type `InputField` at <root>
