crates/dsql-execute/tests/it/snapshots/it__materialization_applies_typed_defaults_and_nullable_variants.snap
---
source: crates/dsql-execute/tests/it/main.rs
expression: "materialize(&operation, &bindings).expect(\"materializes\")"
---
MaterializedOperation {
    sql: "select $1, $2, $3 order by recorded_at null",
    parameters: [
        BoundParameter {
            path: "params.station",
            data_type: "uuid",
            wire: "uuid",
            provider_type: None,
            collection: false,
            value: "018f6f19-795f-7c3d-b1b3-8f177ab8a321",
        },
        BoundParameter {
            path: "input.readings.ids",
            data_type: "int",
            wire: "integer",
            provider_type: None,
            collection: true,
            value: [
                7,
            ],
        },
        BoundParameter {
            path: "context.tenant_id",
            data_type: "uuid",
            wire: "uuid",
            provider_type: None,
            collection: false,
            value: "018f6f19-795f-7c3d-b1b3-8f177ab8a322",
        },
    ],
}
