crates/dsql-execute/tests/it/snapshots/it__materialization_resolves_variants_and_all_input_namespaces.snap
---
source: crates/dsql-execute/tests/it/main.rs
expression: "materialize(&operation(), &bindings).expect(\"materializes\")"
---
MaterializedOperation {
    sql: "select $1, $2, $3 order by recorded_at desc",
    parameters: [
        BoundParameter {
            path: "params.station",
            data_type: "uuid",
            wire: Uuid,
            provider_type: None,
            collection: false,
            value: "018f6f19-795f-7c3d-b1b3-8f177ab8a321",
        },
        BoundParameter {
            path: "input.readings.ids",
            data_type: "int",
            wire: Integer,
            provider_type: None,
            collection: true,
            value: [
                2,
                5,
                8,
            ],
        },
        BoundParameter {
            path: "context.tenant_id",
            data_type: "uuid",
            wire: Uuid,
            provider_type: None,
            collection: false,
            value: "018f6f19-795f-7c3d-b1b3-8f177ab8a322",
        },
    ],
}
