crates/dsql-execute/tests/it/snapshots/it__null_collection.snap
---
source: crates/dsql-execute/tests/it/main.rs
expression: "materialize(&null_collection,\n&bindings).expect(\"null collection materializes\")"
---
MaterializedOperation {
    sql: "select $1, $2, $3 order by recorded_at asc",
    parameters: [
        BoundParameter {
            path: "params.station",
            data_type: "uuid",
            collection: false,
            value: String("018f6f19-795f-7c3d-b1b3-8f177ab8a321"),
        },
        BoundParameter {
            path: "input.readings.ids",
            data_type: "int",
            collection: true,
            value: Null,
        },
        BoundParameter {
            path: "context.tenant_id",
            data_type: "uuid",
            collection: false,
            value: String("018f6f19-795f-7c3d-b1b3-8f177ab8a322"),
        },
    ],
}
